--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -134,7 +134,7 @@
               <label >
                   <span>{{'password' | translate}}</span>
               </label>
-              <input class="form-control" formControlName="password" minlength="8" type="text">
+              <input class="form-control" readonly formControlName="password" minlength="8" type="text">
           </div>
           <div class="d-flex flex-column mb-2">
             <label >
